[project]
name = "blt-byte"
version = "0.1.0"
description = "OWASP BLT AI assistant, orchestrator and security agent (Cloudflare Workers AI)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "webtypy>=0.1.7",
]

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
